[gd_scene load_steps=4 format=3 uid="uid://coa7x2a0uu8bh"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_a65uo"]
[ext_resource type="Texture2D" uid="uid://dxhgu18j0cxi1" path="res://Images/titleScreenDraft.png" id="2_3yv7x"]

[sub_resource type="Theme" id="Theme_f0l3d"]
default_font_size = 30

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a65uo")

[node name="TitleScreenDraft" type="Sprite2D" parent="."]
position = Vector2(577.833, 341.5)
scale = Vector2(4.63333, 4.63333)
texture = ExtResource("2_3yv7x")

[node name="StoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 723.0
offset_top = 353.0
offset_right = 1121.0
offset_bottom = 472.0
theme = SubResource("Theme_f0l3d")
text = "Story"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 195.0
offset_right = 1118.0
offset_bottom = 314.0
theme = SubResource("Theme_f0l3d")
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 724.0
offset_top = 508.0
offset_right = 1122.0
offset_bottom = 627.0
theme = SubResource("Theme_f0l3d")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 25.0
offset_right = 1187.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 80
text = "Interview With a Wizard"

[connection signal="pressed" from="StoryButton" to="." method="_on_story_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
